--- a/index.html
+++ b/index.html
@@ -7,54 +7,56 @@
   <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" rel="stylesheet" media="screen">
   <link href="./css/main.css" rel="stylesheet" media="screen">
 </head>
-  <body>
+  <body ng-controller="HomeController">
   <!-- NAVBAR -->
-    <nav class="navbar navbar-default">
-      <div class="container-fluid">
-        <!-- Brand and toggle get grouped for better mobile display -->
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand" href="#">Home</a>
-        </div>
-        <!-- Collect the nav links, forms, and other content for toggling -->
-        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-          <ul class="nav navbar-nav">
-            <li class="dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Sort by <span class="caret"></span></a>
-              <!-- <ul class="dropdown-menu">
-                <li><a ng-click="sortType = 'postRating'; sortReverse = true">Votes</a></li>
-                <li><a ng-click="sortType = 'date'; sortReverse = true">Date</a></li>
-                <li><a ng-click="sortType = 'title'; sortReverse = false">Title</a></li>
-              </ul> -->
-            </li>
-          </ul>
-          <form class="navbar-form navbar-left" role="search">
-            <div class="form-group">
-              <input type="text" class="form-control" placeholder="Search" ng-model="searchText">
-            </div>
-          </form>
-          <!-- <ul class="nav navbar-nav navbar-right">
-            <li><button type="" class="btn btn-default addBtn" ng-click="showForm()"><span class="glyphicon glyphicon-plus">&nbsp;</span>Add Post</button></li>
-          </ul> -->
-        </div><!-- /.navbar-collapse -->
-      </div><!-- /.container-fluid -->
-    </nav>
-
     <div class="container">
+      <nav class="navbar navbar-default">
+        <div class="container-fluid">
+          <!-- Brand and toggle get grouped for better mobile display -->
+          <div class="navbar-header">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+              <span class="sr-only">Toggle navigation</span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" href="#">Home</a>
+          </div>
+          <!-- Collect the nav links, forms, and other content for toggling -->
+          <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+            <ul class="nav navbar-nav">
+              <li class="dropdown">
+                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Sort by <span class="caret"></span></a>
+                <!-- <ul class="dropdown-menu">
+                  <li><a ng-click="sortType = 'postRating'; sortReverse = true">Votes</a></li>
+                  <li><a ng-click="sortType = 'date'; sortReverse = true">Date</a></li>
+                  <li><a ng-click="sortType = 'title'; sortReverse = false">Title</a></li>
+                </ul> -->
+              </li>
+            </ul>
+            <form class="navbar-form navbar-left" role="search">
+              <div class="form-group">
+                <input type="text" class="form-control" placeholder="Search" ng-model="searchText">
+              </div>
+            </form>
+            <!-- <ul class="nav navbar-nav navbar-right">
+              <li><button type="" class="btn btn-default addBtn" ng-click="showForm()"><span class="glyphicon glyphicon-plus">&nbsp;</span>Add Post</button></li>
+            </ul> -->
+          </div><!-- /.navbar-collapse -->
+        </div><!-- /.container-fluid -->
+      </nav>
+    </div>
+    <br><br>
+  <!--   <div class="container">
       <div ng-controller="HomeController">
         <h1>Say something</h1>
         <br>
         <input type="text"></p>
-        <p>{{ itemData }}</p>
+        <p>{{ itemData }}</p> -->
       <!-- add content here -->
-      </div>
-    </div>
-
+      <!-- </div>
+    </div> -->
+    <ssh-tea-data-array tea-data='itemData'></ssh-tea-data-array>
 
 
     <!-- scripts -->
