--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" rel="stylesheet" media="screen">
   <link href="./css/main.css" rel="stylesheet" media="screen">
 </head>
-  <body ng-controller="HomeController">
+  <body>
   <!-- NAVBAR -->
     <div class="container">
       <nav class="navbar navbar-default">
@@ -56,13 +56,15 @@
       <!-- add content here -->
       <!-- </div>
     </div> -->
-    <ssh-tea-data-array tea-data='itemData'></ssh-tea-data-array>
+    <div ng-view></div>
+    <!-- <ssh-tea-data-array tea-data='itemData'></ssh-tea-data-array> -->
 
 
     <!-- scripts -->
     <script src="//code.jquery.com/jquery-2.1.4.min.js"></script>
     <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.5/angular.min.js" type="text/javascript"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.5/angular-route.min.js" type="text/javascript"></script>
     <script src="./js/app.js" type="text/javascript"></script>
     <script src="./js/services.js" type="text/javascript"></script>
     <script src="./js/controllers.js" type="text/javascript"></script>
